Docs: for patch endpoints (company/invite)
